# Network-Automation

./: .env.example  .gitignore  .vercel-deploy  AGENT_ROADMAP.md  CLAUDE.md  CODE_REFERENCE.md  COMMERCIAL_LICENSE.md  Dockerfile.frontend  Dockerfile.release  GITHUB_PROFILE_README.md  LICENSE  MIGRATION_GAPS.md  REACT_MIGRATION_PLAN.md  README.md  REMEDIATION_LOG.md  ROADMAP.md  SETUP_GUIDE.md  SOP.md  alembic.ini  docker-compose.dist.yml  docker-compose.local.yml  docker-compose.yml  env.js  index.html  install.bat  install.sh  manifest.json  pyproject.toml  railway.toml  server.py  setup.py  start.sh  sw.js  topology.example.yaml  upgrade.html  vercel.json
alembic/: env.py
api/: package.json
backend/: .dockerignore  .env.example  Dockerfile  audit.py  auth.py  change_update.py  claude_desktop_config.json  config_drift.py  config_gen.py  credentials.py  db.py  design_engine.py  gate_engine.py  greenfield.py  intent_ai.py  lab_server.py  main.py  mcp_server.py  models.py  monitor_engine.py  nl_parser.py  nornir_config.yaml  nornir_tasks.py  requirements-dev.txt  requirements.txt  sim_engine.py  static_analysis.py  troubleshoot.py  troubleshoot_engine.py
demo_scenarios/: run_demo.py
desktop/: main.js  package.json  preload.js
docs/: RELEASING.md  TESTING.md  architecture.md  backend-improvement-plan.md  features.md  mcp-setup.md  self-host.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
gpu_cluster_net/: __init__.py  cli.py  models.py  readiness.py  reporter.py
lab_demo/: ztp.py  (+7 more)
(+452 files in other folders)
